modules/gdscript/tests/scripts/parser/errors/missing_colon.gd
func test():
	if true # Missing colon here.
		print("true")
